<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">仓库管理</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="inventory">仓库</string>
    <string name="file">文件</string>
    <string name="setting">设置</string>
    <string name="yuan">元</string>
    <string name="name">姓 名</string>
    <string name="tel">电 话</string>
    <string name="num">库存数量：</string>
    <string name="in_date">入库时间：</string>

    
    <string-array name="status_codes">
        <item>0=未知异常.</item>
        <item>400=网络错误，请重试</item>
        <item>403=网络错误，请重试</item>
        <item>407=用户名或密码错误</item>
        <item>500=您的账号已经再另一设备上登录</item>
        <item>903=服务器异常</item>
        <item>904=网络错误，请重试</item>
        <item>905=网络错误，请检查网络连接</item>
        <item>906=网络异常，请检查网络连接</item>
        <item>909=输入非法地址，请检查地址是否正确</item>
        <item>1024=登录超时，请重新登录</item>
    </string-array>
</resources>
