<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
     >
    <TextView 
        android:id="@+id/goods_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"/>
    <TextView 
        android:id="@+id/num_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/goods_name"
        android:layout_below="@id/goods_name"
        android:text="@string/num"/>
    <TextView 
        android:id="@+id/num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/goods_name"
        android:layout_toRightOf="@id/num_left"
        android:text="@string/app_name"/>
    <TextView 
        android:id="@+id/in_date_left"
        android:layout_alignLeft="@id/goods_name"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/num"
        android:text="@string/in_date"/>
    <TextView 
        android:id="@+id/in_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/num"
        android:layout_toRightOf="@id/in_date_left"
        android:text="@string/app_name"/>

</RelativeLayout>
