<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:orientation="horizontal">
	    <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="15dp"
            android:text="@string/name"
            android:gravity="center_vertical|right" />
	    <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:inputType="text"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:gravity="center_vertical|left" />
	</LinearLayout>
	<ImageView 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:src="@drawable/dotted_line"
	    android:visibility="gone"
	    android:contentDescription="@string/app_name"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_vertical"
	    android:orientation="horizontal">
	    <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="15dp"
            android:text="@string/tel"
            android:gravity="center_vertical|right" />
	    <EditText
                android:id="@+id/tel"
                android:layout_width="fill_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="10dp"
                android:inputType="phone"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:ellipsize="end"
                android:gravity="center_vertical|left" />
	</LinearLayout>

</LinearLayout>